[tool.poetry]
name = "\u001b[a"
version = "0.1.0"
description = ""
authors = ["franperic <fran.peric@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.1"
optuna = "^3.1.1"
matplotlib = "^3.7.1"
catboost = "^1.1.1"
scikit-learn = "^1.2.2"
tensorboard = "^2.12.2"
xgboost = "^1.7.5"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
